--- a/index.html
+++ b/index.html
@@ -2,15 +2,31 @@
 <html>
 <head> Mike Rhodes page</head>
 <title> Come on In</title>
-    
-<body>
+<style>
+    body {background-color:darksalmon;}
+    h1 {color:rgb(0, 0, 0)}
+    p {color:#f0ffff}
+    </head>
+    </style>
+    <body>
+
     <h1> Hello and welcome grab you some popcorn </h1>
 
 <img src = https://images.dailyhive.com/20210119102230/shutterstock_746312602.jpg>
 <h2> Thank you so much for visiting my website today, I trust you find it to be pleasing.
-    If you don't then that's ok too, no hate once so ever.
+    If you don't then that's ok too, no hate what so ever.
+<p> Did this popcorn make you hungry? If so you should go pop some.
+    Let me give you some options.</p>
+    <br> 
 
-    <p> Did this popcorn make you hungry?,If so you should go pop some.
+ <p> <strong> Best Combinations </p> </strong> 
+
+<ul>
+    <li>Popcorn and Snickers</li>
+    <li>Popcorn and Milkduds</li>
+    </ul>
 </h2>
+<h3>  Wonder what you think about these combos</h3>
+<h4> Open for feedback </h4>
  </body>
 </html>
