--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
     <h1> Hello and welcome grab you some popcorn </h1>
 
-<img src = https://images.dailyhive.com/20210119102230/shutterstock_746312602.jpg>
+<img src = https://images.dailyhive.com/20210119102230/shutterstock_746312602.jpg
+width="650"
+Height="450"
+Length="475" /> 
+
 <h2> Thank you so much for visiting my website today, I trust you find it to be pleasing.
     If you don't then that's ok too, no hate what so ever.
 <p> Did this popcorn make you hungry? If so you should go pop some.
